Fixing page heights on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,7 +51,6 @@ section {
     justify-content: center;
     align-items: flex-start;
     margin: 0px auto;
-    padding-top: 90px;
 }
 
 ul {
